# Obstetric-Fistula

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
config/: logging_config.yaml  phase1_config.yaml  phase2_config.yaml
data/: responses_en.json
mlruns/0/models/m-72c75e7383974280aa1d6e4bf5e0284c/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-8b937da63be0452fbb70bacf4d46c8a2/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-af96501c99e74e8bbb245599d35d0971/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/0/models/m-e855b02c644d4487aea6f0c2fcfea7d7/artifacts/: MLmodel  model.pkl
mlruns/0/models/m-ed9621b24e04467e8472bb4f3ba05435/artifacts/: MLmodel  model.pkl
scripts/: run_pipeline.sh  start_api.py
src/active_learning/: uncertainty_sampling.py
src/chat/: crisis_detector.py  dialogue_manager.py  phq9.py
src/data/: __init__.py  database.py  generate_chat_data.py  generate_synthetic.py  noise_injection.py  schemas.py
src/evaluation/: bias_audit.py  clinical_metrics.py
src/features/: __init__.py  embedder.py  preprocessing.py
src/models/: __init__.py  explain.py  predict.py  train_distilbert.py  train_intent.py  train_xgboost.py
src/monitoring/: drift_detection.py
src/training/: __init__.py  trainer.py
src/utils/: helpers.py  logger.py
tests/: test_data_generation.py  test_dialogue.py  test_models.py  test_safety.py
