[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fistula_rehab_phase1"
version = "0.1.0"
description = "AI-enabled post-surgical triage for obstetric fistula"
authors = [{name = "Fistula Rehab Team"}]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "sentence-transformers>=2.2",
    "transformers>=4.30",
    "torch>=2.0",
    "mlflow>=2.3",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "shap>=0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.7",
    "isort>=5.12",
    "mypy>=1.5",
    "pre-commit>=3.3",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
exclude = ["tests/"]